# RAT_Python

./: .gitignore  README.md  pyproject.toml  server.crt  server.key
src/: config.py
src/client/: main.py
src/client/utils/: client.py  config.py
src/server/: main.py
src/server/utils/: config.py  server.py
src/utils/: file_utils.py  socket_utils.py
tests/: test_client.py  test_file_utils.py  test_server.py  test_socket_utils.py
