[project]
name = "rat-project-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Horace KOUGBLA",email = "h.kougbla@myskolae.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography (>=46.0.4,<47.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "client", from = "src"},
    {include = "server", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
client = "client.main:main"
server = "server.main:main"